// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project should match snapshot for old projects 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-27 makeStyles-layoutContainer-23"
  >
    <div
      class="MuiBox-root MuiBox-root-28 makeStyles-sideBarLayout-24"
    >
      <div
        class="MuiBox-root MuiBox-root-35"
      >
        <div
          class="MuiTabs-root MuiTabs-vertical"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed"
            style="overflow: hidden;"
          >
            <div
              class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root makeStyles-root-29 MuiTab-textColorInherit makeStyles-textColorInherit-33 Mui-selected makeStyles-selected-32 MuiTab-labelIcon makeStyles-labelIcon-31 MuiTab-fullWidth"
                data-testid="tab-dashboard1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper makeStyles-wrapper-30"
                >
                  <div
                    class="MuiBox-root MuiBox-root-36"
                  >
                    <img
                      alt="dashboard-logo"
                      src="dashboard-icon.svg"
                    />
                  </div>
                  dashboard1
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-37 PrivateTabIndicator-colorSecondary-39 MuiTabs-indicator makeStyles-indicator-34 PrivateTabIndicator-vertical-40"
              style="top: 0px; height: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-41"
    >
      <div
        class="MuiBox-root MuiBox-root-42 makeStyles-projectNameBar-22"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          project1
        </h5>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Save
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div>
        {
  "dashboardData": {
    "name": "dashboard1"
  },
  "projectMetadata": {
    "id": 1,
    "name": "project1"
  }
}
      </div>
    </div>
  </div>
</div>
`;

exports[`Project should match snapshot while creating new project 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-6 makeStyles-layoutContainer-2"
  >
    <div
      class="MuiBox-root MuiBox-root-7 makeStyles-sideBarLayout-3"
    >
      <div
        class="MuiBox-root MuiBox-root-14"
      >
        <div
          class="MuiTabs-root MuiTabs-vertical"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed"
            style="overflow: hidden;"
          >
            <div
              class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root makeStyles-root-8 MuiTab-textColorInherit makeStyles-textColorInherit-12 Mui-selected makeStyles-selected-11 MuiTab-labelIcon makeStyles-labelIcon-10 MuiTab-fullWidth"
                data-testid="tab-dashboard1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiTab-wrapper makeStyles-wrapper-9"
                >
                  <div
                    class="MuiBox-root MuiBox-root-15"
                  >
                    <img
                      alt="dashboard-logo"
                      src="dashboard-icon.svg"
                    />
                  </div>
                  dashboard1
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="PrivateTabIndicator-root-16 PrivateTabIndicator-colorSecondary-18 MuiTabs-indicator makeStyles-indicator-13 PrivateTabIndicator-vertical-19"
              style="top: 0px; height: 0px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-20"
    >
      <div
        class="MuiBox-root MuiBox-root-21 makeStyles-projectNameBar-1"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5"
        >
          untitled project
        </h5>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Save
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div>
        {
  "dashboardData": {
    "name": "dashboard1"
  },
  "projectMetadata": {
    "name": "untitled project"
  }
}
      </div>
    </div>
  </div>
</div>
`;
